{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 65,
  "lineage": "818e0726-5c41-06fd-3d2c-1f061d11696c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "madhu_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035758cc9054fd0a4",
            "association_id": "eipassoc-00db93f89960daa89",
            "domain": "vpc",
            "id": "eipalloc-035758cc9054fd0a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b17c129d587d6222",
            "private_dns": "ip-192-168-1-61.ec2.internal",
            "private_ip": "192.168.1.61",
            "public_dns": "ec2-52-20-137-59.compute-1.amazonaws.com",
            "public_ip": "52.20.137.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "madhu_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:744130429891:loadbalancer/terr-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1e"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terr-elb-576291586.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terr-elb",
            "idle_timeout": 400,
            "instances": [
              "i-08a4af50c40e94b7c",
              "i-097a6afd049f1ad7f"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "tcp",
                "lb_port": 8080,
                "lb_protocol": "tcp"
              }
            ],
            "name": "terr-elb",
            "security_groups": [
              "sg-078656442c3eb4076"
            ],
            "source_security_group": "744130429891/terr-securitygroup",
            "source_security_group_id": "sg-078656442c3eb4076",
            "subnets": [
              "subnet-0144b0bce950e2ea3",
              "subnet-0de91634bc9a2a727"
            ],
            "tags": {
              "Name": "CAPSTONE-PRJT"
            },
            "tags_all": {
              "Name": "CAPSTONE-PRJT"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.web_server1",
            "aws_instance.web_server2",
            "aws_security_group.madhu_sg",
            "aws_subnet.madhu_subnet1",
            "aws_subnet.madhu_subnet2",
            "aws_subnet.madhu_subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef493d4267500ef3",
            "arn": "arn:aws:ec2:us-east-1:744130429891:instance/i-08a4af50c40e94b7c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a4af50c40e94b7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1eab53b265c2837",
            "private_dns": "ip-192-168-1-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c4fe1cd5a01df329",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-078656442c3eb4076"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0144b0bce950e2ea3",
            "tags": {
              "Name": "webserver-private"
            },
            "tags_all": {
              "Name": "webserver-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078656442c3eb4076"
            ]
          },
          "dependencies": [
            "aws_security_group.madhu_sg",
            "aws_subnet.madhu_subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef493d4267500ef3",
            "arn": "arn:aws:ec2:us-east-1:744130429891:instance/i-097a6afd049f1ad7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097a6afd049f1ad7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9f6ebb420683096",
            "private_dns": "ip-192-168-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.108",
            "public_ip": "44.212.42.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085be2bc5f1c1bcfa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-078656442c3eb4076"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0925459fae4b77649",
            "tags": {
              "Name": "webserver-public"
            },
            "tags_all": {
              "Name": "webserver-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078656442c3eb4076"
            ]
          },
          "dependencies": [
            "aws_security_group.madhu_sg",
            "aws_subnet.madhu_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "madhu_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:internet-gateway/igw-06ee5ff36702242aa",
            "id": "igw-06ee5ff36702242aa",
            "owner_id": "744130429891",
            "tags": {
              "Name": "Terr-igw"
            },
            "tags_all": {
              "Name": "Terr-igw"
            },
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "madhu_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:744130429891:targetgroup/terr-lb/3cff4d9e78fa446a",
            "arn_suffix": "targetgroup/terr-lb/3cff4d9e78fa446a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:744130429891:targetgroup/terr-lb/3cff4d9e78fa446a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terr-lb",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:744130429891:targetgroup/terr-lb/3cff4d9e78fa446a-20230915060331029300000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:744130429891:targetgroup/terr-lb/3cff4d9e78fa446a",
            "target_id": "i-08a4af50c40e94b7c"
          },
          "dependencies": [
            "aws_instance.web_server1",
            "aws_lb_target_group.madhu_tg",
            "aws_security_group.madhu_sg",
            "aws_subnet.madhu_subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:744130429891:targetgroup/terr-lb/3cff4d9e78fa446a-20230915060258790800000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:744130429891:targetgroup/terr-lb/3cff4d9e78fa446a",
            "target_id": "i-097a6afd049f1ad7f"
          },
          "dependencies": [
            "aws_instance.web_server2",
            "aws_lb_target_group.madhu_tg",
            "aws_security_group.madhu_sg",
            "aws_subnet.madhu_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "madhu_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035758cc9054fd0a4",
            "association_id": "eipassoc-00db93f89960daa89",
            "connectivity_type": "public",
            "id": "nat-09ef17c14c96a423a",
            "network_interface_id": "eni-0b17c129d587d6222",
            "private_ip": "192.168.1.61",
            "public_ip": "52.20.137.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de91634bc9a2a727"
          },
          "dependencies": [
            "aws_eip.madhu_eip",
            "aws_subnet.madhu_subnet1",
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "madhu_private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd3669d33e6ecc4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09ef17c14c96a423a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd3669d33e6ecc4a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.madhu_eip",
            "aws_nat_gateway.madhu_nat_gateway",
            "aws_route_table.madhu_rt_private",
            "aws_subnet.madhu_subnet1",
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "madhu_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06ee5ff36702242aa",
            "id": "r-rtb-02d3b1751f15afc021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d3b1751f15afc02",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.madhu_igw",
            "aws_route_table.madhu_rt_public",
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "madhu_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:route-table/rtb-0cd3669d33e6ecc4a",
            "id": "rtb-0cd3669d33e6ecc4a",
            "owner_id": "744130429891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ef17c14c96a423a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terr-rt2"
            },
            "tags_all": {
              "Name": "Terr-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "madhu_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:route-table/rtb-02d3b1751f15afc02",
            "id": "rtb-02d3b1751f15afc02",
            "owner_id": "744130429891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ee5ff36702242aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terr-rt1"
            },
            "tags_all": {
              "Name": "Terr-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "madhu_subnet_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062b7e60bd48bc3f9",
            "route_table_id": "rtb-02d3b1751f15afc02",
            "subnet_id": "subnet-0de91634bc9a2a727"
          },
          "dependencies": [
            "aws_route_table.madhu_rt_public",
            "aws_subnet.madhu_subnet1",
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "madhu_subnet_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a53f00d254519e",
            "route_table_id": "rtb-02d3b1751f15afc02",
            "subnet_id": "subnet-0925459fae4b77649"
          },
          "dependencies": [
            "aws_route_table.madhu_rt_public",
            "aws_subnet.madhu_subnet2",
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "madhu_subnet_rt_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59984884e50b025",
            "route_table_id": "rtb-0cd3669d33e6ecc4a",
            "subnet_id": "subnet-0144b0bce950e2ea3"
          },
          "dependencies": [
            "aws_route_table.madhu_rt_private",
            "aws_subnet.madhu_subnet3",
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "madhu_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:security-group/sg-078656442c3eb4076",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078656442c3eb4076",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terr-securitygroup",
            "name_prefix": "",
            "owner_id": "744130429891",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "madhu_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:subnet/subnet-0de91634bc9a2a727",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de91634bc9a2a727",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744130429891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terr-subnet1"
            },
            "tags_all": {
              "Name": "Terr-subnet1"
            },
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "madhu_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:subnet/subnet-0925459fae4b77649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0925459fae4b77649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744130429891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terr-subnet2"
            },
            "tags_all": {
              "Name": "Terr-subnet2"
            },
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "madhu_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:subnet/subnet-0144b0bce950e2ea3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0144b0bce950e2ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744130429891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terr-subnet3"
            },
            "tags_all": {
              "Name": "Terr-subnet3"
            },
            "vpc_id": "vpc-0b02c59e1260c64de"
          },
          "dependencies": [
            "aws_vpc.madhu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "madhu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744130429891:vpc/vpc-0b02c59e1260c64de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-01b2200b443e3b2b3",
            "default_route_table_id": "rtb-04672fdefa8462cd0",
            "default_security_group_id": "sg-0f12d4a1c42555788",
            "dhcp_options_id": "dopt-0e680e679b2eba2fb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b02c59e1260c64de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04672fdefa8462cd0",
            "owner_id": "744130429891",
            "tags": {
              "Name": "Madhu-terr-vpc"
            },
            "tags_all": {
              "Name": "Madhu-terr-vpc"
            }
          }
        }
      ]
    }
  ]
}